# ESP32-Dot-Matrix-Alarm-Clock

./: .gitignore  CMakeLists.txt  README.md  custom_partition_table.csv  sdkconfig
main/: .license_add.txt.swp  64bitpatch_localtime.c  64bitpatch_localtime.h  CMakeLists.txt  Kconfig.projbuild  LICENSE  LICENSE-GPLv3_rotaryEncoder  LICENSE-newlib  app_queue.c  app_queue.h  clock001_main.c  debugtasks.h  defaults_globals.h  display_clock.c  display_clock.h  display_functions.c  display_functions.h  ds3231.c  ds3231.h  eventhandler.c  eventhandler.h  filesystem.c  filesystem.h  font_noto.h  font_terminal.h  http_api_json.c  http_api_json.h  http_api_upload_files.c  http_api_upload_files.h  http_get.c  http_get.h  http_post.c  http_post.h  i2c_functions.c  i2c_functions.h  json_clock.c  json_clock.h  json_files.c  json_files.h  json_network.c  (+19 more)
spiffs_files/: clock.css  clock.js  files.html  fonts.html  index.html  setup.css  setup.html  setup.js
tests/: add_license.sh  clockget.json  curltest_clock_get.sh  curltest_filedir.sh  filedir.json  fileupload.sh  license_add.txt
